# PeopleCat-Server

./: .gitignore  CMakeLists.txt  PeopleCat-Server.code-workspace  PeopleCat_DB.sql  README.md  settings.gradle.kts
.github/workflows/: gradle-build.yml  upload-release.yml
Assets/: MySQL_Config.json
Docs/: Test.html  allclasses-index.html  allpackages-index.html  constant-values.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-summary.html  package-tree.html  search.html  tag-search-index.js  type-search-index.js
Docs/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-21.html  index-22.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
app/: build.gradle.kts
docs/: Test.html  allclasses-index.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  package-summary.html  package-tree.html  search.html  serialized-form.html  tag-search-index.js  type-search-index.js
docs/PeopleCat-Server Docs/: PeopleCat Server.md
docs/index-files/: index-1.html  index-10.html  index-11.html  (+19 more)
include/: Message.hpp  MessageQueue.hpp  MySQLHandler.hpp  PeopleCatDB.hpp
src/: Message.cpp  MessageQueue.cpp  MySQLHandler.cpp  Test.java  main.cpp
(+96 files in other folders)
